# hari

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 01_tutorial.md  02_contribute.md  index.md
docs/api/: contract.md  hari_spark_manager.md  helpers.md  logger.md  project.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  install.md  todos.md
hari/cli/: app.py  contrato_dados.py  projeto.py
hari/cli/commands/: cli.py  contract.py  project.py
hari/models/: contrato.py
hari/utils/: helpers.py
hari_data/session/: hari_spark_session_manager.py
hari_data/session/hari/: hari_spark_session_local.py
tests/: test_app.py  test_cli.py  test_cli_contrato_dados.py  test_contract.py  test_contrato_model.py  test_exceptions.py  test_hari_spark_session_manager.py  test_helpers.py  test_logger.py  test_project.py  test_projeto.py  test_spark_session.py  test_template.py
