[project]
name = "hari"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Zeferino",email = "julioszeferino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hari = "hari.cli.commands.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
pytest-mock = "^3.14.1"
pyyaml = "^6.0.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.16"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.16.12"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.6"
pymdown-extensions = "^10.16.1"
mkdocs = "^1.6.1"
mkdocs-material-extensions = "^1.3.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules --ignore=hari/cli/templates"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint= "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=hari --cov-report=term-missing -vv"
post_test = "coverage html"

